--- a/adarsh-balika/projects.html
+++ b/adarsh-balika/projects.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects | adarshbalika</title>
-    <link rel="stylesheet" href="../lib/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <nav class="navigation contianer">
       <div class="nav-brand">iAmDeveloper</div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
-          <a class="link" href="./index.html">home</a>
+          <a class="link" href="./home.html">home</a>
         </li>
         <li class="list-item-inline">
           <a class="link link-active" href="./projects.html">projects</a>
