--- a/adarsh-balika/home.html
+++ b/adarsh-balika/home.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>home | adarshbalika</title>
-    <link rel="stylesheet" href="../lib/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <nav class="navigation contianer">
       <div class="nav-brand">iAmDeveloper</div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
-          <a class="link link-active" href="./index.html">home</a>
+          <a class="link link-active" href="./home.html">home</a>
         </li>
         <li class="list-item-inline"><a class="link" href="./projects.html">projects</a></li>
         <li class="list-item-inline"><a class="link" href="./blogs.html">blogs</a></li>
@@ -21,7 +21,7 @@
 
     <header class="hero">
       <img
-        src="/LessonThree/img/undraw_static_assets_rpm6.svg"
+        src="../img/undraw_static_assets_rpm6.svg"
         alt=""
         class="hero-img"
       />
@@ -45,7 +45,7 @@
           I like to showcase my work and thus, you can see my projects hosted
           online
         </p>
-        <a class="link link-primary" href="/">See Projects</a>
+        <a class="link link-primary" href="./projects.html">See Projects</a>
       </div>
     </section>
 
@@ -56,7 +56,7 @@
           I am also working on some technical and non techincal blogs. I like to
           document my journey of learning.
         </p>
-        <a class="link link-secondary" href="/">Read Blogs</a>
+        <a class="link link-secondary" href="./blogs.html">Read Blogs</a>
       </div>
     </section>
 
