--- a/adarsh-balika/index.html
+++ b/adarsh-balika/index.html
@@ -12,7 +12,7 @@
       <div class="nav-brand">iAmDeveloper</div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
-          <a class="link link-active" href="./home.html">home</a>
+          <a class="link link-active" href="./index.html">home</a>
         </li>
         <li class="list-item-inline"><a class="link" href="./projects.html">projects</a></li>
         <li class="list-item-inline"><a class="link" href="./blogs.html">blogs</a></li>
