--- a/adarsh-balika/projects.html
+++ b/adarsh-balika/projects.html
@@ -12,7 +12,7 @@
       <div class="nav-brand">iAmDeveloper</div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
-          <a class="link" href="./home.html">home</a>
+          <a class="link" href="./index.html">home</a>
         </li>
         <li class="list-item-inline">
           <a class="link link-active" href="./projects.html">projects</a>
