--- a/adarsh-balika/projects.html
+++ b/adarsh-balika/projects.html
@@ -32,7 +32,19 @@
 
     <section class="section ow">
       <div class="container container-center">
-        <h1>how much do you know Ramayana</h1>
+        <h1>how well do you know me?</h1>
+        <small>March, 2023</small>
+        <p>
+          A CLI app build with nodeJS. How much do you know Ramayana? Let's play a quiz and see.
+        </p>
+        <a class="link link-primary" href="https://replit.com/@kumarsuraj54057/QuizGame2?embed=1&output=1">Live Project</a> 
+        <a class="link link-secondary" href="https://github.com/suraj-20/neog.camp/blob/master/LessonOne/QuizApp2.js">View Source</a>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container container-center">
+        <h1>how much do you know Ramayana?</h1>
         <small>March, 2023</small>
         <p>
           A CLI app build with nodeJS. How much do you know Ramayana? Let's play a quiz and see.
@@ -42,7 +54,7 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="section ow">
       <div class="container contianer-center">
         <h1>palindrome-birthday</h1>
         <small>December, 2020</small>
@@ -55,7 +67,7 @@
       </div>
     </section>
 
-    <section class="section ow">
+    <section class="section">
       <div class="container container-center">
         <h1>learn-tiangles</h1>
         <small>December, 2020</small>
@@ -65,7 +77,7 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="section ow">
       <div class="container contianer-center">
         <h1>is-your-birthday-lucky</h1>
         <small>December, 2020</small>
