Image path changes

--- a/adarsh-balika/index.html
+++ b/adarsh-balika/index.html
@@ -21,7 +21,7 @@
 
     <header class="hero">
       <img
-        src="../img/undraw_static_assets_rpm6.svg"
+        src="./img/undraw_static_assets_rpm6.svg"
         alt=""
         class="hero-img"
       />
